--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -1,14 +1,16 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head> 
-    <title>Login</title>
+    <title>sign-in</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<form action="#" th:action="@{/registration}" th:object="${user}" method="post">
+<h1>Sign-in</h1>
+<span th:text="${error != null} ? ${error}"></span>
+<form action="#" th:action="@{/sign-in}" th:object="${user}" method="post">
     <p>Name: <input type="text" th:field="*{name}" /></p>
     <p>Password: <input type="password" th:field="*{password}" required="required"/></p>
-    <p><input type="submit" value="Login"/> or <a href="/registration">Register</a></p>
+    <p><input type="submit" value="sign-in"/> or <a href="/sign-up">Register</a></p>
 </form>
 </body>
 </html>
