--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -21,7 +21,9 @@
     </script>
 </head>
 <body>
-<form action="#" th:action="@{/registration}" th:object="${user}" method="post">
+<h2>Sign-up</h2>
+<span th:text="${error != null} ? ${error}"></span>
+<form action="#" th:action="@{/sign-up}" th:object="${user}" method="post">
     <p>Name: <input type="text" th:field="*{name}" required="required"/></p>
     <p>Password: <input type="password" th:field="*{password}" id="password" required="required"/></p>
     <p>Confirm password: <input type="password" id="confirm_password" required="required"/></p>
