--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -10,7 +10,7 @@
 <form action="#" th:action="@{/sign-in}" th:object="${user}" method="post">
     <p>Name: <input type="text" th:field="*{name}" /></p>
     <p>Password: <input type="password" th:field="*{password}" required="required"/></p>
-    <p><input type="submit" value="sign-in"/> or <a href="/sign-up">Register</a></p>
+    <p><input type="submit" value="sign-in"/> or <a href="sign-up">Register</a></p>
 </form>
 </body>
 </html>
