--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <h1>Sign-in</h1>
-<span th:text="${error != null} ? ${error}"></span>
+<p th:text="${exit_msg != ''} ? ${exit_msg}"></p>
+<p th:text="${empty_user_data != null} ? ${empty_user_data}"></p>
+<p th:text="${invalid_user_data != null} ? ${invalid_user_data}"></p>
 <form action="#" th:action="@{/sign-in}" th:object="${user}" method="post">
     <p>Name: <input type="text" th:field="*{name}" /></p>
     <p>Password: <input type="password" th:field="*{password}" required="required"/></p>
